--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "prototype of minosynth",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "front:dev" : "npm run css:build && npm run front:build",
+    "css:build": "cd front/ && npx tailwindcss build -i src/css/input.css -o src/css/output.css",
+    "front:build": "cd front/ && npx webpack"
   },
   "author": "immotare",
   "license": "ISC",
@@ -17,5 +20,13 @@
     "typescript": "^4.4.4",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "css-loader": "^6.5.1",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.12"
   }
 }
