--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "front:dev" : "npm run css:build && npm run front:build",
+    "front:dev": "npm run css:build && npm run front:build",
     "css:build": "cd front/ && npx tailwindcss build -i src/css/input.css -o src/css/output.css",
     "front:build": "cd front/ && npx webpack"
   },
@@ -14,8 +14,11 @@
   "dependencies": {
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.63.0",
