--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "immotare",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^17.0.23",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.3",
@@ -20,6 +21,7 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.7.0",
     "typescript": "^4.4.4",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1"
