--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.3",
+    "ioredis": "^5.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "socket.io": "^4.4.1",
@@ -27,6 +28,8 @@
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "autoprefixer": "^10.4.2",
     "css-loader": "^6.5.1",
     "postcss": "^8.4.5",
